rtl support added

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 
   <link rel="shortcut icon" href="{{ 'favicon.ico' | absolute_url }}" type="image/x-icon">
 
+   <link rel='stylesheet' id='bootstrap-css' href="{{ '/assets/rtl_bootstrap/bootstrap.rtl.min.css?ver=3.3.7.3' | absolute_url }}" type='text/css' />
+
   <link rel="stylesheet" href="{{ '/assets/css/just-the-docs.css' | absolute_url }}">
 
   {% if site.ga_tracking != nil %}
@@ -30,6 +32,7 @@
     <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | absolute_url }}"></script>
   {% endif %}
   <script type="text/javascript" src="{{ '/assets/js/just-the-docs.js' | absolute_url }}"></script>
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
