--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  font-family: $body-font-family;
+  font-family:  'Amiri', serif;
   font-size: inherit;
   line-height: $body-line-height;
   color: $body-text-color;
@@ -111,3 +111,5 @@ hr {
   background-color: $border-color;
   border: 0;
 }
+
+
